# anvil-core

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ANVIL_10_OUT_OF_10.md
examples/: benchmark_scenario.json
scripts/: run_three_layer_e2e.py
src/anvil_core/: __init__.py  adapters.py  benchmark.py  bridge.py  cli.py  harness_runner.py  hashing.py  models.py  providers.py
tests/: test_benchmark.py  test_bridge.py  test_harness_runner.py  test_providers.py
