[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "anvil-core"
version = "0.1.0"
description = "ANVIL integration bridge and benchmark harness"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary / Internal Evaluation"}
authors = [{name = "ANVIL Product Team"}]
dependencies = []

[project.scripts]
anvil-core = "anvil_core.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

